@@ -1,0 +1,63 @@
+﻿<SyntaxDefinition name="XML" extensions=".xml;.xsl;.xslt;.xsd;.manifest;.config;.addin;.xshd;.wxs;.wxi;.wxl;.proj;.csproj;.vbproj;.ilproj;.booproj;.build;.xfrm;.targets;.xaml;.xpt;.xft;.map;.wsdl;.disco;.ps1xml;.nuspec" xmlns="http://icsharpcode.net/sharpdevelop/syntaxdefinition/2008">
+  <Color foreground="Gray" name="Comment" exampleText="&lt;!-- comment --&gt;" />
+  <Color foreground="#dc322f" name="CData" exampleText="&lt;![CDATA[data]]&gt;" />
+  <Color foreground="#b58900" name="DocType" exampleText="&lt;!DOCTYPE rootElement&gt;" />
+  <Color foreground="#b58900" name="XmlDeclaration" exampleText='&lt;?xml version="1.0"?&gt;' />
+  <Color foreground="#268bd2" name="XmlTag" exampleText='&lt;tag attribute="value" /&gt;' />
+  <Color foreground="#b58900" name="AttributeName" exampleText='&lt;tag attribute="value" /&gt;' />
+  <Color foreground="#2aa198" name="AttributeValue" exampleText='&lt;tag attribute="value" /&gt;' />
+  <Color foreground="#2aa198" name="Entity" exampleText="index.aspx?a=1&amp;amp;b=2" />
+  <Color foreground="#dc322f" name="BrokenEntity" exampleText="index.aspx?a=1&amp;b=2" />
+
+  <RuleSet>
+    <Span color="Comment" multiline="true">
+      <Begin>&lt;!--</Begin>
+      <End>--&gt;</End>
+    </Span>
+    <Span color="CData" multiline="true">
+      <Begin>&lt;!\[CDATA\[</Begin>
+      <End>]]&gt;</End>
+    </Span>
+    <Span color="DocType" multiline="true">
+      <Begin>&lt;!DOCTYPE</Begin>
+      <End>&gt;</End>
+    </Span>
+    <Span color="XmlDeclaration" multiline="true">
+      <Begin>&lt;\?</Begin>
+      <End>\?&gt;</End>
+    </Span>
+    <Span color="XmlTag" multiline="true">
+      <Begin>&lt;</Begin>
+      <End>&gt;</End>
+      <RuleSet>
+        <!-- Treat the position before '<' as end, as that's not a valid character
+             in attribute names and indicates the user forgot a closing quote. -->
+        <Span color="AttributeValue" multiline="true" ruleSet="EntitySet">
+          <Begin>"</Begin>
+          <End>"|(?=&lt;)</End>
+        </Span>
+        <Span color="AttributeValue" multiline="true" ruleSet="EntitySet">
+          <Begin>'</Begin>
+          <End>'|(?=&lt;)</End>
+        </Span>
+        <Rule color="AttributeName">[\d\w_\-\.]+(?=(\s*=))</Rule>
+        <Rule color="AttributeValue">=</Rule>
+      </RuleSet>
+    </Span>
+    <Import ruleSet="EntitySet"/>
+  </RuleSet>
+
+  <RuleSet name="EntitySet">
+    <Rule color="Entity">
+      &amp;
+      [\w\d\#]+
+      ;
+    </Rule>
+
+    <Rule color="BrokenEntity">
+      &amp;
+      [\w\d\#]*
+      #missing ;
+    </Rule>
+  </RuleSet>
+</SyntaxDefinition>
