@@ -5,7 +5,8 @@
 		<ResourceDictionary Source="/eXeMeL;component/Resources/ThemeColors.xaml"/>
 		<ResourceDictionary Source="/eXeMeL;component/Resources/Icons.xaml"/>
 		<ResourceDictionary Source="/eXeMeL;component/Resources/CommonStyles.xaml"/>
-        <ResourceDictionary Source="/eXeMeL;component/Resources/DarkThemeColors.xaml"/>
-    </ResourceDictionary.MergedDictionaries>
+		<ResourceDictionary Source="/eXeMeL;component/Resources/DarkThemeColors.xaml"/>
+		<ResourceDictionary Source="/eXeMeL;component/Resources/SolarizedDarkThemeColors.xaml"/>
+	</ResourceDictionary.MergedDictionaries>
 	<!-- Resource dictionary entries should be defined here. -->
 </ResourceDictionary>
