@@ -1,0 +1,107 @@
+﻿<ResourceDictionary 
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:MahApps="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+  >
+
+  <SolidColorBrush x:Key="EditorTextBrush" Color="{DynamicResource Gray7}"/>
+  <Color x:Key="WindowGlowColor">#99B99400</Color>
+
+  <Color x:Key="AccentColor" >#CCB99400</Color>
+  <Color x:Key="AccentColor2">#99B99400</Color>
+  <Color x:Key="AccentColor3">#66B99400</Color>
+  <Color x:Key="AccentColor4">#33B99400</Color>
+  <SolidColorBrush x:Key="AccentColorBrush" Color="{StaticResource AccentColor}"/>
+  <SolidColorBrush x:Key="AccentColorBrush2" Color="{StaticResource AccentColor2}"/>
+  <SolidColorBrush x:Key="AccentColorBrush3" Color="{StaticResource AccentColor3}"/>
+  <SolidColorBrush x:Key="AccentColorBrush4" Color="{StaticResource AccentColor4}"/>
+
+
+
+  <Color x:Key="BlackColor">#FFFFFFFF</Color>
+	<Color x:Key="WhiteColor">#002b36</Color>
+
+
+  <Color x:Key="Gray1">#FFF9F9F9</Color>
+  <Color x:Key="Gray2">#FF7F7F7F</Color>
+  <Color x:Key="Gray7">#FF7E7E7E</Color>
+  <Color x:Key="Gray8">#FF454545</Color>
+  <Color x:Key="Gray10">#FF2F2F2F</Color>
+
+  <Color x:Key="GrayNormal">#FF7D7D7D</Color>
+  <Color x:Key="GrayHover">#FFAAAAAA</Color>
+
+  <Color x:Key="FlyoutColor">#FF2B2B2B</Color>
+
+  <!-- re-set brushes too -->
+  <SolidColorBrush x:Key="BlackBrush" Color="{StaticResource BlackColor}" />
+  <SolidColorBrush x:Key="TextBrush" Color="{StaticResource BlackColor}" />
+  <SolidColorBrush x:Key="LabelTextBrush" Color="{StaticResource BlackColor}" />
+  <SolidColorBrush x:Key="BlackColorBrush" Color="{StaticResource BlackColor}" />
+  <SolidColorBrush x:Key="TextBoxMouseOverInnerBorderBrush" Color="{StaticResource BlackColor}" />
+  <SolidColorBrush x:Key="TextBoxFocusBorderBrush" Color="{StaticResource BlackColor}" />
+  <SolidColorBrush x:Key="ButtonMouseOverBorderBrush" Color="{StaticResource BlackColor}" />
+  <SolidColorBrush x:Key="ButtonMouseOverInnerBorderBrush" Color="{StaticResource BlackColor}" />
+  <SolidColorBrush x:Key="ComboBoxMouseOverBorderBrush" Color="{StaticResource BlackColor}" />
+  <SolidColorBrush x:Key="ComboBoxMouseOverInnerBorderBrush" Color="{StaticResource BlackColor}" />
+
+  <SolidColorBrush x:Key="ControlBackgroundBrush" Color="{StaticResource WhiteColor}" />
+  <SolidColorBrush x:Key="WhiteBrush" Color="{StaticResource WhiteColor}" />
+  <SolidColorBrush x:Key="WhiteColorBrush" Color="{StaticResource WhiteColor}" />
+  <SolidColorBrush x:Key="DisabledWhiteBrush" Color="{StaticResource WhiteColor}" />
+  <SolidColorBrush x:Key="WindowBackgroundBrush" Color="{StaticResource WhiteColor}" />
+
+  <SolidColorBrush x:Key="{x:Static SystemColors.WindowBrushKey}" Color="{StaticResource WhiteColor}" />
+  <SolidColorBrush x:Key="{x:Static SystemColors.ControlTextBrushKey}" Color="{StaticResource BlackColor}" />
+
+  <LinearGradientBrush x:Key="CheckBoxBackgroundBrush" EndPoint="0.5,1" StartPoint="0.5,0">
+    <GradientStop Color="{StaticResource Gray7}" Offset="0" />
+    <GradientStop Color="{StaticResource WhiteColor}" Offset="1" />
+  </LinearGradientBrush>
+
+  <SolidColorBrush x:Key="GrayBrush1" Color="{StaticResource Gray1}" />
+  <SolidColorBrush x:Key="GrayBrush2" Color="{StaticResource Gray2}"/>
+  <SolidColorBrush x:Key="GrayBrush7" Color="{StaticResource Gray7}" />
+  <SolidColorBrush x:Key="GrayBrush8" Color="{StaticResource Gray8}" />
+  <SolidColorBrush x:Key="GrayBrush10" Color="{StaticResource Gray10}" />
+
+  <SolidColorBrush x:Key="GrayNormalBrush" Color="{StaticResource GrayNormal}" />
+  <SolidColorBrush x:Key="GrayHoverBrush" Color="{StaticResource GrayHover}" />
+
+  <SolidColorBrush x:Key="CheckBoxMouseOverBrush" Color="{StaticResource Gray1}" />
+
+  <SolidColorBrush x:Key="SliderValueDisabled" Color="#FF535353" />
+  <SolidColorBrush x:Key="SliderTrackDisabled" Color="#FF383838" />
+  <SolidColorBrush x:Key="SliderThumbDisabled" Color="#FF7E7E7E" />
+  <SolidColorBrush x:Key="SliderTrackHover" Color="#FF737373" />
+  <SolidColorBrush x:Key="SliderTrackNormal" Color="#FF6C6C6C" />
+
+  <SolidColorBrush x:Key="FlyoutBackgroundBrush" Color="{StaticResource FlyoutColor}" />
+  <SolidColorBrush x:Key="FlyoutForegroundBrush" Color="{StaticResource BlackColor}" />
+
+  <SolidColorBrush x:Key="FlatButtonPressedBackgroundBrush" Color="#444444"/>
+
+  <!-- menu brushes -->
+  <SolidColorBrush x:Key="MenuBackgroundBrush" Color="{StaticResource WhiteColor}" />
+  <SolidColorBrush x:Key="ContextMenuBackgroundBrush" Color="{StaticResource WhiteColor}" />
+  <SolidColorBrush x:Key="SubMenuBackgroundBrush" Color="{StaticResource WhiteColor}" />
+
+  <SolidColorBrush x:Key="ContextMenuBorderBrush" Color="{StaticResource BlackColor}" />
+  <SolidColorBrush x:Key="SubMenuBorderBrush" Color="{StaticResource BlackColor}" />
+
+  <SolidColorBrush x:Key="MenuItemSelectionFill" Color="#313131" />
+  <SolidColorBrush x:Key="MenuItemSelectionStroke" Color="#313131" />
+
+  <SolidColorBrush x:Key="TopMenuItemPressedFill" Color="#313131" />
+  <SolidColorBrush x:Key="TopMenuItemPressedStroke" Color="#E0717070" />
+  <SolidColorBrush x:Key="TopMenuItemSelectionStroke" Color="#90717070" />
+
+  <!-- original #FF9A9A9A" -->
+  <SolidColorBrush x:Key="DisabledMenuItemForeground" Color="{StaticResource Gray7}" />
+  <SolidColorBrush x:Key="DisabledMenuItemGlyphPanel" Color="#848589" />
+
+  <SolidColorBrush x:Key="{x:Static SystemColors.MenuTextBrushKey}" Color="{StaticResource BlackColor}" />
+
+  <Color x:Key="MenuShadowColor">#FFFFFFFF</Color>
+
+</ResourceDictionary>
